--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,16 +2,14 @@ version: '3.8'
 services:
   backend:
     build: ./backend
-    environment:
-      DB_HOST: host.docker.internal
-      DB_USER: postgres
-      DB_PASS: password
-      DB_NAME: marvel_db
+    env_file:
+      - backend/.env
     ports:
       - "4000:4000"
+
   frontend:
     build: ./frontend
     ports:
-      - "3000:80"
+      - "80:80"
     depends_on:
       - backend
